--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # Setzen Sie dies auf Ihren Hauptbranch
+      - main  # oder der Name Ihres Hauptbranches
 
 jobs:
   build-and-deploy:
@@ -15,16 +15,18 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '20.13.0'  # Wählen Sie die Node.js-Version, die Sie verwenden
+          node-version: '18'
 
       - name: Install dependencies
         run: npm ci
+        working-directory: ./betterclassroom
 
       - name: Build
         run: npm run build
+        working-directory: ./betterclassroom
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./betterclassroom/dist
