--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,34 +1,37 @@
 name: Deploy to GitHub Pages
 
-on:
-  push:
-    branches:
-      - main
+   on:
+     push:
+       branches:
+         - main
 
-jobs:
-  build-and-deploy:
-    permissions:
-        contents: write
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+   jobs:
+     build-and-deploy:
+       permissions:
+         contents: write
+       runs-on: ubuntu-latest
+       steps:
+         - name: Checkout
+           uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '20'
+         - name: Set up Node.js
+           uses: actions/setup-node@v3
+           with:
+             node-version: '20'
 
-      - name: Install dependencies
-        run: npm ci
-        working-directory: ./betterclassroom
+         - name: Install dependencies
+           run: npm ci
+           working-directory: ./betterclassroom
 
-      - name: Build
-        run: npm run build
-        working-directory: ./betterclassroom
+         - name: Build
+           run: npm run build
+           working-directory: ./betterclassroom
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./betterclassroom/dist
+         - name: Create .nojekyll file
+           run: touch ./betterclassroom/dist/.nojekyll
+
+         - name: Deploy to GitHub Pages
+           uses: peaceiris/actions-gh-pages@v3
+           with:
+             github_token: ${{ secrets.GITHUB_TOKEN }}
+             publish_dir: ./betterclassroom/dist
