--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,17 +21,15 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-        working-directory: ./betterclassroom
 
       - name: Build
         run: npm run build
-        working-directory: ./betterclassroom
-
+        
       - name: Create .nojekyll file
-        run: touch ./betterclassroom/dist/.nojekyll
+        run: touch ./dist/.nojekyll
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./betterclassroom/dist
+          publish_dir: ./dist
