--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,3 +33,8 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
+          
+      - name: List contents of dist directory
+        run: |
+          echo "Contents of dist directory:"
+          ls -R dist
