github pages fix

--- a/package.json
+++ b/package.json
@@ -40,5 +40,10 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
+  },
+  "homepage": "http://betterclassroom.de",
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
