--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
   },
-  "homepage": "http://betterclassroom.de"
+  "homepage": "https://betterclassroom.de"
 }
